--- a/application-prod.properties
+++ b/application-prod.properties
@@ -4,3 +4,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Shy@m1612
 spring.jpa.show-sql=false
+spring.datasource.hikari.maximum-pool-size=30
