--- a/application-prod.properties
+++ b/application-prod.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=Shy@m1612
 spring.jpa.show-sql=false
 spring.datasource.hikari.maximum-pool-size=30
+application.theme.color=dark
