--- a/application-prod.properties
+++ b/application-prod.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Shy@m1612
 spring.jpa.show-sql=false
 spring.datasource.hikari.maximum-pool-size=30
 application.theme.color=dark
+management.endpoints.web.exposure.include=*
