--- a/application-prod.properties
+++ b/application-prod.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=false
 spring.datasource.hikari.maximum-pool-size=30
 application.theme.color=dark
 management.endpoints.web.exposure.include=*
+server.port=8080
